@@ -1,20 +1,0 @@
-<!-- ###TEMPLATE_LIST### start -->
-<div class="###PREFIXID###_lastRelease">
-	<!-- ###GROUP_ROW_CONTENT### start -->
-	<!-- ###GROUP_ROW_ALT### start -->
-	<!-- ###GROUP_ROW### start -->
-	<!-- ###ROW_ITEM### start -->
-	<div class="###PREFIXID###_dataset">
-		###CATEGORY_PICTO###
-		<div class="last_release">
-			<p><a class="detail_link" href="###URL###">###TITLE###</a></P>
-			<p>###RELEASE_DATE###</p>
-			<p>###PUBLISHER###</p>
-		</div>
-	</div>
-	<!-- ###ROW_ITEM### end -->
-	<!-- ###GROUP_ROW### end -->
-	<!-- ###GROUP_ROW_ALT### end -->
-	<!-- ###GROUP_ROW_CONTENT### end -->
-</div>
-<!-- ###TEMPLATE_LIST### end -->
