@@ -1,3 +1,6 @@
+2012-03-22 Tsi YANG <tsi@in-cite.net>
+	* Refactor: Removed categories pictos process to ics_od_categories extension.
+
 2012-03-20 Emilie SAGNIEZ  <emilie@in-cite.net>
 	* Change to version 1.1.0
 
